# poly-weather

./: .env.example  Procfile  nixpacks.toml  pyproject.toml  requirements.txt
src/weather_edge/: __init__.py  cli.py  config.py  pipeline.py
src/weather_edge/calibration/: __init__.py  openmeteo_history.py  station_bias.py
src/weather_edge/common/: http.py  llm.py  types.py
src/weather_edge/data/: station_biases.json
src/weather_edge/forecasting/: base.py  calibration.py  hurricane.py  precipitation.py  registry.py  temperature.py  utils.py
src/weather_edge/markets/: classifier.py  client.py  models.py  parser.py
src/weather_edge/notifications/: telegram.py
src/weather_edge/signals/: analyzer.py  formatters.py  models.py  resolver.py  tracker.py
src/weather_edge/weather/: geocoding.py  models.py  noaa.py  openmeteo.py  stations.py  wunderground.py
tests/: conftest.py  test_analyzer.py  test_calibration.py  test_classifier.py  test_cli.py  test_formatters.py  test_geocoding.py  test_hurricane.py  test_markets_client.py  test_noaa.py  test_openmeteo.py  test_parser.py  test_pipeline.py  test_precipitation.py  test_resolver.py  test_station_bias.py  test_telegram.py  test_temperature.py  test_tracker.py
