[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-edge"
version = "0.1.0"
description = "Polymarket weather prediction market signal generator"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "geopy>=2.4",
    "tenacity>=8.2",
    "aiosqlite>=0.20",
]

[project.scripts]
weather-edge = "weather_edge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_edge"]
